Added basic (horrific) styling and content blocks

--- a/views/home.njk
+++ b/views/home.njk
@@ -3,3 +3,10 @@
 {% block header %}
 <h1>HOME</h1>
 {% endblock %}
+
+{% block content %}
+
+<h2>Oh my gawd, it's time to PEAR REVIEW!</h2>
+<iframe src="https://giphy.com/embed/26ufoAcj4cdJoeKzu" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/google-google-doodle-pear-fruit-games-26ufoAcj4cdJoeKzu"></a></p>
+
+{% endblock %}
