--- a/views/registration.njk
+++ b/views/registration.njk
@@ -4,3 +4,22 @@
 <h1>REGISTRATION</h1>
 {% endblock %}
 
+{% block content %}
+
+<h2>ADD YOURSELF AS A NEW USER</h2>
+
+<form>
+    <p>
+        <label>NAME</label>
+        <input></input><br>
+    </p>
+
+    <p>
+        <label>EMAIL</label>
+        <input></input>
+    </p>
+</form>
+
+<button type="submit">REGISTER</button>
+
+{% endblock %}
