--- a/views/template.njk
+++ b/views/template.njk
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Pear Review App</title>
+  <link href="https://fonts.googleapis.com/css?family=Rajdhani|VT323" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/css/index.css">
 </head>
 
 <body>
@@ -22,6 +24,10 @@
 {% block header %}
 This is the default header
 {% endblock %}
+
+{% block content %}
+{% endblock %}
+
 </section>
 
 </body>
